--- a/promileziChallenge/src/App.css
+++ b/promileziChallenge/src/App.css
@@ -4,13 +4,18 @@
   --blueTwo: #2e6ca8;
 }
 
+* {
+  font-family: sans-serif;
+}
+
 #root {
   width: 100%;
   min-height: 100vh;
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
 }
 
 .navCont {
@@ -18,154 +23,372 @@
   height: 10vh;
   display: flex;
   align-items: center;
+  padding: 1rem;
+
+}
+.navCont .logoMobile {
+  display: none;
+}
+.offCanvasMenu {
+  background: red;
+  width: 80%;
+  height: 70vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: none;
+}
+
+.navCont ul {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
   justify-content: flex-start;
 }
 
-.navCont .logo {
-  width: 10%;
-  height: 5vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.navCont .logo img {
-  width: 95%;
-}
-
-.navCont ul {
-  width: 80%;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.navCont ul {
-  width: 80%;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  list-style: none;
-}
 .navCont ul li {
-  width: 10%;
-  height: 5vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  list-style: none;
-  font-weight: bolder;
-}
-
-#reqDemoBtn {
-  width: 10%;
-  height: 100%;
+  min-width: 10%;
+  min-height: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem;
+  font-weight: 700;
+  font-size: 3.5rem;
+  color: black;
+}
+.navCont ul li:nth-child(1) {
+  height: 95%;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30%;
 }
 
-#reqDemoBtn button {
-  min-height: 5vh;
-  width: 95%;
-  font-size: 12px;
-  border-radius: 5px;
+.navCont ul li button {
   background: var(--green);
+  height: 5vh;
+  width: 95%;
   color: white;
+  font-size: 3rem;
+  border: none;
+}
+.navCont ul li:nth-child(1) img {
+  width: 90%;
 }
 
+/*WELCOME COMP*/
 .welcome {
   width: 90%;
   min-height: 85vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  padding: 1rem;
 }
 
 .welcome .welcomeChild {
   min-height: 80vh;
   width: 60%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
   
+.welcome .welcomeChild img {
+  min-height: 80vh;
+  width: 60%;
+  display:none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.welcome .left {
+  width: 40%;
+  padding-left: 3rem;
+  gap: 100px;
 }
 
 .welcome .left h1 {
-  color: var(--green);
-  font-size: 1.2rem;
-  font-size: normal;
-  font-weight: normal;
-  margin-bottom: -5%;
-}
-
-.welcome .left {
-  width: 40%;
-  gap: 0;
-  margin: 0;
-  padding: 1rem;
-}
-.welcome .left * {
-  width: 100%;
   min-height: 3vh;
+  color: var(--green);
+  width: 100%;
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: flex-start;
-  padding: 0.3rem;
+  font-size: 4rem;
+  font-weight: 400;
 }
-
 .welcome .left h2 {
-  background: var(--blueTwo); /* Replace with your desired radial gradient */
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  font-size: 3rem;
-  margin-bottom: -5%;
-  
-
-}
-
-.welcome .left h2 {
-  background: var(--blueTwo); /* Replace with your desired radial gradient */
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  font-size: 3rem;
+  min-height: 3vh;
+  color: var(--blueTwo);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 17.5rem;
+  font-weight: 700;
   
 }
 
 .welcome .left p {
-/* Replace with your desired radial gradient */
-color: grey;
-
-  font-size: 1rem;
-  margin-top: 5%;
-  font-size: 1.2rem;
-  font-size: normal;
-  font-weight: normal;
-}
-
-.welcome .left .buttonHolder {
-  min-height: 5vh;
+  min-height: 3vh;
+  color: rgb(187, 187, 187);
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 5%;
+  font-size: 4rem;
+  font-weight: normal;
 }
 
-.welcome .left .buttonHolder button {
-  min-height: 3.5vh;
-  width: 35%;
-  padding: 0.5rem;
-  background-color: var(--green);
-  color: white;
-  border-radius: 5px;
+.welcome .buttonHolder {
+  height: 5vh;
+  width: 100%;
   display: flex;
   align-items: center;
+  gap: 2%;
 }
 
-.welcome .left .buttonHolder button:nth-child(1) {
-  background: var(--blueTwo);
+.welcome .buttonHolder button {
+  border: none;
+  color: white;
+  font-size: 3rem;
+  height: 95%;
+  width: 30%;
+  background-color: var(--blueTwo);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:4px;
+}
+
+.welcome .buttonHolder button:nth-child(2) {
+
+  width: 40%;
+  background-color: var(--green);
+
+}
+
+/*splitter*/
+
+.splitter{
+
+  width: 90%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.splitter span{
+  width: 1%;
+  height: 90%;
+  background: var(--green);
+  
+
+}
+
+.splitter  p{
+  width: 30%;
+  height: 90%;
+  font-size:6rem ;
+  color: var(--blueTwo);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-weight: bold;
+  padding-left: 2rem;
+  
+}
+
+.splitter  p span{
+  width: 30%;
+  height: 90%;
+
+  font-weight: normal;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background:white;
+
+}
+
+
+/*why section*/
+
+.why{
+  border: solid grey 1px;
+  width: 95%;
+  min-height: 50vh;
+}
+
+
+
+@media screen and (min-width: 320px) and (max-width: 1024px) and (orientation: portrait) {
+  .navCont {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    box-shadow: 3px 3px 10px grey;
+  }
+  .navCont ul {
+    display: none;
+  }
+  .navCont .logoMobile {
+    display: flex;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-right: 20px;
+  }
+  .navCont .logoMobile img {
+    display: flex;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .navCont .logoMobile span {
+    flex: 1;
+  }
+  .navCont .logoMobile #toggleIcon {
+    display: flex;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .offCanvasMenu {
+    background: var(--blueTwo);
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+  }
+  .offCanvasMenu li {
+    min-height: 5vh;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+  }
+  .offCanvasMenu li button {
+    background: var(--green);
+    height: 5vh;
+    border: none;
+    color: white;
+    width: 70%;
+  }
+
+  /*WELCOME COMP*/
+  .welcome {
+    border: solid rgb(47, 0, 255);
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0rem;
+  }
+
+  .welcome .welcomeChild {
+    min-height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: solid;
+  
+  }
+
+  .welcome .left  {
+   border: solid purple;
+   width: 95%;
+  }
+  
+  .welcome .right  {
+    border: solid rgb(121, 13, 13);
+   }
+ 
+
+  .welcome .left h1 {
+    min-height: 3vh;
+    color: var(--green);
+    width: 100%;
+    display: none;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 4rem;
+    font-weight: 400;
+  }
+  .welcome .left h2 {
+    min-height: 3vh;
+    color: var(--blueTwo);
+    width: 100%;
+    display: none;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 15rem;
+    font-weight: 700;
+    line-height: 220px;
+  }
+
+  .welcome .left p {
+    min-height: 3vh;
+    color: rgb(187, 187, 187);
+    width: 100%;
+    display: none;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 4rem;
+    font-weight: normal;
+  }
+
+  .welcome .buttonHolder {
+    height: 5vh;
+    width: 100%;
+    display: none;
+    align-items: center;
+    gap: 2%;
+  }
+
+  .welcome .buttonHolder button {
+    border: none;
+    color: white;
+    font-size: 3rem;
+    height: 90%;
+    width: 30%;
+    background-color: var(--green);
+    display: none;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .welcome .buttonHolder button:nth-child(2) {
+    border: none;
+    color: white;
+    font-size: 3rem;
+    height: 90%;
+    width: 40%;
+    background-color: var(--blueTwo);
+    display: none;
+    align-items: center;
+    justify-content: center;
+  }
 }
