--- a/promileziChallenge/src/index.css
+++ b/promileziChallenge/src/index.css
@@ -6,6 +6,10 @@
 body{
   min-height: 100vh;
   width: 100%;
-  background: rgb(255, 255, 255);
+  background: rgb(170, 14, 14);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
 }
